--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,6 +8,7 @@
       "strict": true,
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
+      "allowImportingTsExtensions": true,
       // "baseUrl": "./src",
       "skipLibCheck": true
       // "paths": {
