--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/connect-mongodb-session": "^2.4.4",
+    "@types/cors": "^2.8.13",
     "@types/express-session": "^1.17.7",
     "nodemon": "^2.0.22"
   },
