--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express-session": "^1.17.7",
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -25,8 +29,10 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/bcrypt": "^5.0.0",
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.14",
     "@types/node": "^20.5.9",
     "nodemon": "^3.0.1"
   }
