--- a/server/package.json
+++ b/server/package.json
@@ -2,29 +2,45 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node script.js",
-    "dev": "nodemon script.js"
+    "start": "node dist/server.js",
+    "dev": "nodemon server.ts",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.7",
-    "axios": "^1.3.4",
-    "bcrypt": "^5.1.0",
+    "app-root-path": "^3.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.2.0",
+    "mongodb": "^6.0.0",
+    "mongoose": "^6.9.1",
+    "nodemailer": "^6.9.4",
+    "validator": "^13.11.0",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.3",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.13.0",
+    "@types/nodemailer": "^6.4.9",
+    "@types/validator": "^13.11.1",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^4.9.5"
   }
 }
