--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "backend",
+  "name": "spotlight_be",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node script.js",
-    "dev": "nodemon script.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd src && ts-node app.ts || exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.7",
-    "axios": "^1.3.4",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.5"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.3",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.10"
   }
 }
