--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "backend",
+  "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node script.js",
-    "dev": "nodemon script.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.3",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.4.7",
-    "axios": "^1.3.4",
-    "bcrypt": "^5.1.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^7.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "mongoose": "^7.5.0"
   }
 }
